--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 					break
 				}
 			}
-			num=2
+			num=4
     	var TITLE=titleArr[num]
-    	var API_URL="http://jinhe.yshfresh.com/"  // /
-    	var IMG_URL = 'http://jinhe.yshfresh.com/servlet/getfile?file=' // /servlet/getfile?file=
+    	var API_URL="http://wanjx.yshfresh.com/"  // /
+    	var IMG_URL = 'http://wanjx.yshfresh.com/servlet/getfile?file=' // /servlet/getfile?file=
     	// /servlet/getfile?file=/video/   /hefengzhongye/video/
     	var VIDEO_URL = 'http://47.94.144.115:8089'+'/'+videoArr[num]+'/video/'  
 //  	var API_URL='http://10.2.15.51:8082/'
